[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/ScrollablePopupMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://EditorsElements/DialogEditor/EditUiBlocks/TextEditBlock.gd" type="Script" id=2]
[ext_resource path="res://UI/BBCodeEditor.tscn" type="PackedScene" id=3]

[node name="TextEditBlock" type="VBoxContainer"]
margin_right = 14.0
margin_bottom = 14.0
script = ExtResource( 2 )

[node name="Person" type="GridContainer" parent="."]
margin_right = 113.0
margin_bottom = 46.0
columns = 2

[node name="Label" type="Label" parent="Person"]
margin_top = 3.0
margin_right = 44.0
margin_bottom = 18.0
text = "PERSON:"
uppercase = true

[node name="PersonPick" parent="Person" instance=ExtResource( 1 )]
margin_left = 48.0
margin_right = 113.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="Person"]
margin_top = 28.0
margin_right = 44.0
margin_bottom = 43.0
text = "FONT:"
uppercase = true

[node name="FontPick" parent="Person" instance=ExtResource( 1 )]
margin_left = 48.0
margin_top = 25.0
margin_right = 113.0
margin_bottom = 46.0
size_flags_horizontal = 3

[node name="FontShow" type="CheckBox" parent="."]
margin_top = 50.0
margin_right = 113.0
margin_bottom = 74.0
pressed = true
text = "Preview font"
align = 1

[node name="Editor" parent="." instance=ExtResource( 3 )]
margin_top = 78.0
margin_right = 113.0
margin_bottom = 178.0
rect_min_size = Vector2( 0, 100 )

[connection signal="item_selected" from="Person/PersonPick" to="." method="_on_PersonPick_item_selected"]
[connection signal="item_selected" from="Person/FontPick" to="." method="_on_FontPick_item_selected"]
[connection signal="toggled" from="FontShow" to="." method="_on_FontShow_toggled"]
[connection signal="text_changed" from="Editor" to="." method="_on_Editor_text_changed"]
